--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 :root{
     --bg-color: #f5f5f5;
     --text-color: #000000;
+    --shadow-primary: 0 4px 10px rgba(0, 0, 0, 0.2);
+    --radius-children: 12px;
 }
 
 body{
@@ -16,6 +18,9 @@ body{
     overflow: hidden;
     position: relative;
     background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
 }
 
 
@@ -97,7 +102,7 @@ body{
 
 .search-box{
     width: 100%;
-    height: auto;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -194,12 +199,161 @@ body{
         display: flex;
         background: var(--bg-color);
         border-radius: 30px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    }
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+    };
 }
 
 .separator{
     width: 2px;
     background-color: #d7d2cc;
     align-self: stretch;
+}
+
+.current-weather-card{
+    width: auto;
+    height: min-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-block: 15px;
+    position: relative;
+
+    .current-card{
+        width: 100%;
+        height: min-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
+        .time-info{
+            width: 100%;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px;
+            margin-block: 5px;
+            text-align: center;
+            box-shadow: var(--shadow-primary);
+            border-radius: var(--radius-children);
+        };
+    
+        .location-info{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 5px;
+            margin: 10px 5px;
+            box-shadow: var(--shadow-primary);
+            border-radius: var(--radius-children);
+    
+            h2, h3{
+                margin-right: 5px;
+            };
+            h3{
+                font-size: 20px;
+            };
+        };
+
+        .condition-element{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+
+            .temperature{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                margin: 10px 5px;
+                padding: 15px;
+                box-shadow: var(--shadow-primary);
+                border-radius: var(--radius-children);
+                text-align: center;
+        
+                .current-temp{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 5px;
+                };
+            };
+            .current-condition{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                box-shadow: var(--shadow-primary);
+                border-radius: var(--radius-children);
+                padding: 10px 5px;
+                margin-block: 5px;
+
+                img{
+                    height: 75px;
+                    width: 75px;
+                };
+                h3{
+                    font-size: 20px;
+                    font-weight: bold;
+                };
+                p{
+                    font-size: 18px;
+                };
+            };
+        };
+    };
+
+    
+}
+
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 10px 5px;
+    margin: auto;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(28, 28, 28, 0.8);
+    color: #ffffff;
+
+    p{
+        font-size: 14px;
+        margin: 5px 0;
+    };
+
+    .footer-content{
+        width: auto;
+        padding: 0 5px;
+        margin-left: 5px;
+        display: flex;
+        gap: 20px;
+
+        a{
+            text-decoration: none;
+            font-weight: bold;
+            color: #ff6347;
+            padding-left: 5px;
+        };
+        a:hover{
+            text-decoration: underline;
+        };
+    };
+
+    .social-links{
+        display: flex;
+        gap: 15px;
+    };
+
+    .social-icon{
+        width: 24px;
+        height: 24px;
+        transition: transform 0.3s ease;
+    };
+    .social-icon:hover{
+        transform: scale(1.1);
+    }
 }
