--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
     width: 100%;
     height: 70px;
     background-color: var(--bg-color);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     margin: 0 2px;
     display: flex;
     justify-content: space-between;
@@ -170,7 +171,7 @@ body{
         .image-text{
             position: absolute;
             top: 45%;
-            left: 45%;
+            left: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
             color: var(--text-color);
@@ -188,17 +189,18 @@ body{
     };
 
     .search-area{
-        width: 500px;
-        height: 60px;
-        padding: 0 15px;
         position: absolute;
         top: 80%;
         left: 50%;
         transform: translate(-50%, -50%);
+        width: 525px;
+        height: 60px;
+        padding: 0 15px;
         display: flex;
         background: var(--bg-color);
         border-radius: 30px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+        z-index: 10;
     };
 }
 
@@ -208,9 +210,63 @@ body{
     align-self: stretch;
 }
 
-.weather-container{
-    display: grid;
-    grid-template-columns: 1fr auto;
+.aqi-element{
+    width: 100%;
+    height: min-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: var(--radius-children);
+    background-color: var(--background-color-child);
+    padding: 5px;
+
+    .aqi-heading{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 5px;
+        padding: 0 10px;
+
+        .aqi-header{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+
+            .aqi-description{
+                font-size: 16px;
+                font-weight: 600;
+                margin-block: 5px;
+                padding: 5px 20px;
+                border-radius: 20px;
+                background-color: #149DFF;
+            };
+        };
+    };
+
+    .aqi-body{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 10px 5px 10px;
+
+        div{
+            width: max-content;
+            padding: 10px 20px;
+            border-radius: var(--radius-children);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            border: 1px solid transparent;
+            h4{
+                text-align: left;
+            };
+            h3, p{
+                text-align: center;
+            };
+        };
+    };
 }
 
 .current-weather-card{
@@ -218,16 +274,17 @@ body{
     height: min-content;
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-block: 25px;
+    justify-content: space-between;
+    margin: 20px;
 
     .current-card{
-        width: 100%;
-        height: min-content;
+        width: max-content;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+        margin: 5px 20px;
 
         .time-info{
             width: 550px;
@@ -237,76 +294,43 @@ body{
             text-align: center;
             border-radius: var(--radius-children);
             background-color: var(--background-color-child);
+            margin-block: 5px;
         };
     
         .location-info{
             width: 550px;
             display: flex;
-            justify-content: flex-start;
-            align-items: center;
+            justify-content: center;
+            align-items: flex-start;
+            flex-direction: column;
             flex-wrap: wrap;
             padding: 5px;
-            margin: 10px 0;
+            margin: 5px 0;
             border-radius: var(--radius-children);
             background-color: var(--background-color-child);
-    
-            h2, h3{
-                margin-right: 5px;
-            };
-            h3{
-                font-size: 20px;
-            };
-        };
 
-        .aqi-element{
-            width: 550px;
-            height: min-content;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            border-radius: var(--radius-children);
-            background-color: var(--background-color-child);
-            margin-bottom: 5px;
 
-            .aqi-heading{
-                width: 100%;
-                height: min-content;
+            .searched-location-element{
                 display: flex;
+                justify-content: center;
                 align-items: center;
+            }
+
+            .state-country-element{
+                display: flex;
                 justify-content: flex-start;
-                gap: 5px;
-                padding-left: 15px;
-            };
-
-            .aqi-body{
-                width: 100%;
-                height: min-content;
-                display: flex;
-                justify-content: space-between;
                 align-items: center;
-                flex-wrap: wrap;
-                padding: 5px;
-
-                div{
-                    width: auto;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    margin: 5px;
-                    padding: 5px 12px;
-                    background-color: #1e2a36;
-                    border-radius: 25px;
-                    h4{
-                        color: #f5f5f5;
-                    };
+                padding-left: 40px;
+                margin-bottom: 5px;
+                font-size: 18px;
+                img{
+                    margin-left: 5px;
                 };
             };
         };
 
         .condition-temp-wind-humidity-div{
-            width: 100%;
+            width: 550px;
             height: min-content;
             display: flex;
             justify-content: space-between;
@@ -353,7 +377,7 @@ body{
                     padding: 0 10px 10px 10px;
                     margin: 5px 0 5px 5px;
                     text-align: center;
-                    
+
                     img{
                         height: 75px;
                         width: 75px;
@@ -385,6 +409,7 @@ body{
                     border-radius: var(--radius-children);
                     padding: 10px;
                     margin: 5px 5px 5px 0;
+                    gap: 5px;
                 };
                 .wind-element{
                     width: 200px;
@@ -396,13 +421,26 @@ body{
                     border-radius: var(--radius-children);
                     padding: 10px;
                     margin: 5px 0 5px 5px;
+                    gap: 5px;
                 };
             };
+
+            .aqi{
+                width: 100%;
+                height: min-content;
+            }
         };
 
     };
 
-    
+    .hourly-forecast{
+        width: 100%;
+        margin: 5px 20px 5px 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
 }
 
 .footer-container{
@@ -445,6 +483,7 @@ body{
     .social-links{
         display: flex;
         gap: 15px;
+        margin-right: 5px;
     };
 
     .social-icon{
