--- a/style.css
+++ b/style.css
@@ -11,13 +11,14 @@
     --text-color: #000000;
     --radius-children: 12px;
     --background-color-child: #d3d3d3;
+    --display-flex: flex;
 }
 
 body{
     min-height: 100vh;
     overflow: hidden;
-    background-color: var(--bg-color);
-    display: flex;
+    background-color: #f7f1e9;
+    display: var(--display-flex);
     flex-direction: column;
     overflow-y: auto;
 }
@@ -103,7 +104,7 @@ body{
 .search-box{
     width: 100%;
     height: 60px;
-    display: flex;
+    display: var(--display-flex);
     justify-content: center;
     align-items: center;
     background-color: var(--bg-color);
@@ -150,7 +151,7 @@ body{
     width: 100%;
     margin-top: 10px;
     height: 250px;
-    display: flex;
+    display: var(--display-flex);
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
@@ -158,7 +159,7 @@ body{
     .placeholder-img{
         width: 100%;
         height: min-content;
-        display: flex;
+        display: var(--display-flex);
 
         .weather-image{
             width: 100%;
@@ -213,7 +214,7 @@ body{
 .aqi-element{
     width: 100%;
     height: min-content;
-    display: flex;
+    display: var(--display-flex);
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -223,19 +224,20 @@ body{
 
     .aqi-heading{
         width: 100%;
-        display: flex;
+        display: var(--display-flex);
         justify-content: space-between;
         align-items: center;
         margin: 5px;
         padding: 0 10px;
 
         .aqi-header{
-            display: flex;
+            display: var(--display-flex);
             flex-direction: column;
             justify-content: center;
             align-items: flex-start;
 
             .aqi-description{
+                width: max-content;
                 font-size: 16px;
                 font-weight: 600;
                 margin-block: 5px;
@@ -251,14 +253,16 @@ body{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
         padding: 0 10px 5px 10px;
 
         div{
-            width: max-content;
+            width: 130px;
+            height: max-content;
+            margin: 10px 5px;
             padding: 10px 20px;
             border-radius: var(--radius-children);
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-            border: 1px solid transparent;
             h4{
                 text-align: left;
             };
@@ -271,57 +275,64 @@ body{
 
 .current-weather-card{
     width: 100%;
-    height: min-content;
-    display: flex;
+    height: max-content;
+    display: var(--display-flex);
     align-items: center;
-    justify-content: space-between;
-    margin: 20px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 40px 20px 20px 20px;
 
     .current-card{
-        width: max-content;
+        width: 50%;
         height: 100%;
-        display: flex;
-        flex-direction: column;
+        display: var(--display-flex);
         justify-content: center;
-        align-items: flex-start;
-        margin: 5px 20px;
+        align-items: center;
+        flex-direction: column;
+        margin-block: 5px;
 
         .time-info{
-            width: 550px;
+            width: 100%;
+            height: max-content;
             font-size: 18px;
             font-weight: bold;
-            padding: 10px;
+            padding: 15px 10px;
+            margin-block: 5px;
             text-align: center;
             border-radius: var(--radius-children);
             background-color: var(--background-color-child);
-            margin-block: 5px;
-        };
-    
-        .location-info{
-            width: 550px;
-            display: flex;
+            display: var(--display-property);
             justify-content: center;
-            align-items: flex-start;
-            flex-direction: column;
+            align-items: center;
+        };
+
+        .location-info{
+            width: 100%;
+            height: max-content;
+            display: var(--display-flex);
+            justify-content: space-between;
+            align-items: center;
             flex-wrap: wrap;
-            padding: 5px;
-            margin: 5px 0;
+            padding: 10px;
+            margin-block: 5px;
             border-radius: var(--radius-children);
             background-color: var(--background-color-child);
-
-
+    
+    
             .searched-location-element{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .state-country-element{
-                display: flex;
+                width: auto;
+                display: var(--display-flex);
                 justify-content: flex-start;
                 align-items: center;
+            }
+    
+            .state-country-element{
+                width: auto;
+                display: var(--display-flex);
+                justify-content: flex-end;
+                align-items: center;
                 padding-left: 40px;
-                margin-bottom: 5px;
+                margin: 5px;
                 font-size: 18px;
                 img{
                     margin-left: 5px;
@@ -329,122 +340,108 @@ body{
             };
         };
 
-        .condition-temp-wind-humidity-div{
-            width: 550px;
-            height: min-content;
-            display: flex;
+        .condition-element{
+            width: 100%;
+            height: 100%;
+            display: var(--display-flex);
             justify-content: space-between;
             align-items: center;
-            flex-direction: column;
-            gap: 5px;
+            flex-wrap: wrap;
+            margin: 5px;
 
-            .condition-element{
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: space-between;
+            .temperature{
+                width: 200px;
+                height: 150px;
+                display: var(--display-flex);
+                flex-direction: column;
                 align-items: center;
-    
-                .temperature{
-                    width: 200px;
-                    height: auto;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    margin: 5px 5px 5px 0;
-                    padding: 15px;
-                    background-color: var(--background-color-child);
-                    border-radius: var(--radius-children);
-                    text-align: center;
-            
-                    .current-temp{
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        padding: 5px;
-                    };
-                };
-                .current-condition{
-                    width: 200px;
-                    height: auto;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    background-color: var(--background-color-child);
-                    border-radius: var(--radius-children);
-                    padding: 0 10px 10px 10px;
-                    margin: 5px 0 5px 5px;
-                    text-align: center;
+                justify-content: center;
+                padding: 10px;
+                margin: 5px;
+                background-color: var(--background-color-child);
+                border-radius: var(--radius-children);
+                text-align: center;
 
-                    img{
-                        height: 75px;
-                        width: 75px;
-                    };
-                    h3{
-                        font-size: 20px;
-                        font-weight: bold;
-                    };
-                    p{
-                        font-size: 18px;
-                    };
+                .current-temp{
+                    display: var(--display-flex);
+                    justify-content: center;
+                    align-items: center;
+                    padding: 5px;
                 };
             };
 
-            .wind-humidity-element{
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: space-between;
+            .humidity-visibility-div,
+            .wind-pressure-div{
+                width: 200px;
+                height: 150px;
+                display: var(--display-flex);
+                justify-content: center;
                 align-items: center;
+                flex-direction: column;
+                margin: 5px;
 
-                .humidity-element{
-                    width: 200px;
+                .humidity-element, 
+                .visibility-element,
+                .wind-element, 
+                .pressure-element{
+                    width: 100%;
                     height: min-content;
-                    display: flex;
+                    display: var(--display-flex);
                     justify-content: center;
                     align-items: center;
                     background-color: var(--background-color-child);
                     border-radius: var(--radius-children);
                     padding: 10px;
                     margin: 5px 5px 5px 0;
-                    gap: 5px;
-                };
-                .wind-element{
-                    width: 200px;
-                    height: min-content;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    background-color: var(--background-color-child);
-                    border-radius: var(--radius-children);
-                    padding: 10px;
-                    margin: 5px 0 5px 5px;
-                    gap: 5px;
+                    gap: 10px;
                 };
             };
 
-            .aqi{
-                width: 100%;
-                height: min-content;
-            }
+            .current-condition{
+                width: 200px;
+                height: 150px;
+                display: var(--display-flex);
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                background-color: var(--background-color-child);
+                border-radius: var(--radius-children);
+                padding: 5px;
+                margin: 5px;
+                text-align: center;
+
+                img{
+                    height: 75px;
+                    width: 75px;
+                };
+                h3{
+                    font-size: 20px;
+                    font-weight: bold;
+                };
+                p{
+                    font-size: 18px;
+                }
+            };
         };
 
-    };
+        .aqi{
+            width: 100%;
+            height: min-content;
+            display: flex;
+            margin: 5px;
+        };
+    }; 
 
-    .hourly-forecast{
-        width: 100%;
-        margin: 5px 20px 5px 5px;
-        display: flex;
+    .day-forecast{
+        width: 20%;
+        height: max-content;
+        display: var(--display-flex);
         flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-    }
+    };
 }
 
 .footer-container{
-    display: flex;
+    display: var(--display-flex);
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
@@ -481,7 +478,7 @@ body{
     };
 
     .social-links{
-        display: flex;
+        display: var(--display-flex);
         gap: 15px;
         margin-right: 5px;
     };
