--- a/style.css
+++ b/style.css
@@ -7,22 +7,24 @@
 }
 
 :root{
-    --bg-color: #f5f5f5;
+    --bg-color: #ffffff;
     --text-color: #000000;
     --radius-children: 12px;
-    --background-color-child: #d3d3d3;
+    --background-color-child: #ececec;
     --display-flex: flex;
+}
+#night-background-color{
+    background: linear-gradient(to bottom, #3b3b3b, #d3d3d3);
 }
 
 body{
-    min-height: 100vh;
+    min-height: 100%;
     overflow: hidden;
-    background-color: #f7f1e9;
+    background-color: var(--bg-color);
     display: var(--display-flex);
     flex-direction: column;
     overflow-y: auto;
 }
-
 
 .app-header{
     width: 100%;
@@ -243,7 +245,7 @@ body{
                 margin-block: 5px;
                 padding: 5px 20px;
                 border-radius: 20px;
-                background-color: #149DFF;
+                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             };
         };
     };
@@ -273,23 +275,143 @@ body{
     };
 }
 
+.day-forecast-element{
+    width: max-content;
+    height: 100%;
+    display: var(--display-flex);
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 10px;
+
+    .header-text{
+        width: 100%;
+        background-color: var(--background-color-child);
+        border-radius: var(--radius-children);
+        padding: 10px;
+        margin-block: 10px;
+        text-align: center;
+    };
+
+    .body-element{
+        width: 100%;
+        background-color: var(--background-color-child);
+        border-radius: var(--radius-children);
+        display: var(--display-flex);
+        flex-direction: column;
+        padding: 5px;
+        margin: 5px;
+
+        .day-forecast-description{
+            width: 100%;
+            height: max-content;
+            display: var(--display-flex);
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            border-bottom: 2px solid #149DFF;
+            padding: 5px;
+            margin-bottom: 5px;
+            font-size: 18px;
+            text-align: center;
+
+            img{
+                height: 75px;
+                width: 75px;
+                filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.2));
+            };
+        };
+
+        .uv-element{
+            width: 100%;
+            height: min-content;
+            display: var(--display-flex);
+            align-items: center;
+            justify-content: flex-start;
+            border-bottom: 2px solid #149DFF;
+            padding: 5px;
+            margin-block: 5px;
+            gap: 10px;
+    
+            img{
+                width: 40px;
+                height: 40px;
+            };
+        };
+
+        .minmax-temperature{
+            width: 100%;
+            height: min-content;
+            display: var(--display-flex);
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin-bottom: 5px;
+            border-bottom: 2px solid #149DFF;
+            
+            div{
+                width: 100%;
+                display: var(--display-flex);
+                align-items: center;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 5px;
+                padding-block: 5px;
+                text-align: center;
+            };
+        };
+
+        .avg-humidity-element{
+            width: 100%;
+            display: var(--display-flex);
+            justify-content: flex-start;
+            align-items: center;
+            margin-block: 5px;
+            padding-block: 5px;
+            border-bottom: 2px solid #149DFF;
+            gap: 5px;
+            text-align: center;
+        };
+
+        .chances-element{
+            width: 100%;
+            display: var(--display-flex);
+            justify-content: center;
+            align-items: flex-start;
+            flex-direction: column;
+            margin-top: 5px;
+            text-align: center;
+
+            h4{
+                padding: 5px;
+                margin-left: 10%;
+                font-size: 18px;
+            };
+        };
+    };
+}
+
 .current-weather-card{
     width: 100%;
     height: max-content;
     display: var(--display-flex);
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
-    margin: 40px 20px 20px 20px;
+    margin: 30px 20px 20px 20px;
+    padding-bottom: 40px;
 
     .current-card{
         width: 50%;
-        height: 100%;
+        height: max-content;
         display: var(--display-flex);
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        margin-block: 5px;
+        margin: 5px 10px;
+        gap: 5px;
 
         .time-info{
             width: 100%;
@@ -427,16 +549,16 @@ body{
         .aqi{
             width: 100%;
             height: min-content;
-            display: flex;
+            display: var(--display-flex);
             margin: 5px;
         };
     }; 
 
     .day-forecast{
-        width: 20%;
-        height: max-content;
+        width: 25%;
+        height: min-content;
         display: var(--display-flex);
-        flex-direction: column;
+        margin: 0 10px 15px 15px;
     };
 }
 
