--- a/style.css
+++ b/style.css
@@ -165,6 +165,47 @@ body::-webkit-scrollbar{
     };
 }
 
+.loading-text{
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+}
+
+.auto-suggestion{
+    width: 100%;
+    display: var(--display-flex);
+    justify-content: flex-start;
+    align-items: center;
+    margin: 3px;
+    z-index: 2;
+    background-color: var(--bg-color);
+    border-radius: 12px;
+
+    .suggestion-list{
+        width: 100%;
+        list-style-type: none;
+        padding: 5px;
+        font-size: 20px;
+        overflow-x: hidden;
+        overflow-y: auto;
+
+        .list-item{
+            width: 100%;
+            padding: 5px 10px;
+            border-left: 3px solid transparent;
+            text-transform: capitalize;
+            overflow: hidden;
+        };
+        .list-item:hover, .list-item.selected{
+            background-color: var(--background-color-child);
+            border-left: 3px solid #000000;
+            border-top-right-radius: 20px;
+            border-bottom-right-radius: 20px;
+            cursor: pointer;
+        };
+    };
+}
+
 .placeholder-container{
     position: relative;
     width: 100%;
