--- a/style.css
+++ b/style.css
@@ -265,6 +265,21 @@ body::-webkit-scrollbar{
     };
 }
 
+.carousel{
+    width: 100%;
+    margin: 45px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    h3{
+        font-size: 20px;
+        font-weight: 600;
+        margin: 0 15px;
+    };
+}
+
 .separator{
     width: 2px;
     background-color: #d7d2cc;
